--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ transition: all 0.3s ease;
 .container{
   height:545px;
 }
+    .AccorHead:hover p{
+    color:hsl(14, 88%, 65%);
+    }
 @media screen and (max-width: 768px) {
   .imgDiv {
       background: url(./images/bg-pattern-mobile.svg);
